--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "eslint-plugin-react": "^5.0.1",
-    "react-hot-loader": "^1.3.0",
+    "react-hot-loader": "^3.0.0-alpha.8",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
   },
